--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,6 +23,7 @@
         
     </head>
     <body>
+        <!-- header bar at the top of each page -->
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="index.html">
@@ -49,6 +50,7 @@
 
         <div class="spacing">
             <div class="parent-flex nav-bar">
+                <!-- introduction text about me -->
                 <div class="flex-item-left">
                     <div class="section-header">Huarui Lai</div>
                     <div class="section-text">Hi! I’m an aspiring <span class="green-font">UI/UX designer</span>
@@ -57,6 +59,7 @@
                      <span class="green-font">Human-Computer Interaction.</span>
                      Welcome to my design portfolio.</div>
                 </div>
+                <!-- self-drawn GIF to go with self-description -->
                 <div class="flex-item-right">
                     <img class="image-display" alt="a crocodile and goose animation" src="assets/croc-goose.GIF" />
                 </div>
@@ -69,6 +72,7 @@
                         <div class="section-header">Project Highlights</div>
                 </div>
 
+                <!-- gallery view of all my projects -->
                 <div class="services">
                     <div class="services-list">
                         <div class="proj" id = "proj1"> 
@@ -145,6 +149,7 @@
                     </div>
                 </div>
 
+                <!-- footer section with contact information and relevant icons -->
                 <div class="footer">
                     <div class="container">
                         <div class="services-list-1">
