--- a/portfolio/projects/gaugeme.html
+++ b/portfolio/projects/gaugeme.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="icon" type="image/png" href="../assets/h-icon.png" />
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/projects.css">
         <script defer src="js/app.js"></script>
-
     </head>
+
     <body>
+        <!-- header bar at the top of every page -->
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
@@ -36,6 +36,7 @@
         </header>
 
         <div>
+            <!-- flexbox with project overview -->
             <div class = "subhead">
                  <div class = "proj-title">
                      Gauge Me.
@@ -52,12 +53,14 @@
                  </div>
             </div>
          </div>
+         <!-- google slideshow created for the project -->
          <div class="body-text-big"> 
             <div class="video-embed">
                 <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTxRmU7IHI8UQhTyx5CT3V3uXEWeboC-blk1VGES1yfHz_teyRaUF9T8gnKhF5L0EPPciqeFUy-uB38/embed?start=false&loop=true&delayms=3000" width="480" height="299"></iframe>
             </div>
         </div>
         
+        <!-- motivation for the project -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Project Motivation</div>
@@ -67,6 +70,7 @@
             </div>
         </div>
 
+        <!-- project timeline -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Timeline</div>
@@ -103,6 +107,7 @@
             </div>
         </div>
 
+        <!-- product proposal -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Product Proposal</div>
@@ -118,6 +123,7 @@
             </div>
         </div>
 
+        <!-- current gaps in the market -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Market Gap</div>
@@ -127,6 +133,7 @@
             </div>
         </div>
 
+        <!-- impact of the proposed product -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Impact</div>
@@ -136,8 +143,7 @@
             </div>
         </div>
 
-        
-
+        <!-- previous and next buttons to navigate between projects -->       
         <div class="footer">
             <div class="container">
                 <div class="contact center">
@@ -157,6 +163,7 @@
             </div>
         </div>
 
+        <!-- personal contact information -->
         <div class="footer">
             <div class="container">
                 <div class="services-list-1">
