--- a/portfolio/projects/google.html
+++ b/portfolio/projects/google.html
@@ -4,17 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <script src="../node_modules/animejs/lib/anime.min.js"></script>
-        <!-- <script src="./node_modules/animejs/lib/anime.min.js"></script> -->
-
         <title>Huarui Lai</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter">
         <link rel="icon" type="image/png" href="../assets/h-icon.png" />
         <link rel="stylesheet" href="../css/style.css">
         <link rel="stylesheet" href="../css/projects.css">
         <script defer src="../js/google.js"></script>
-
     </head>
+
     <body>
+        <!-- header bar at the top of every page -->
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
@@ -37,6 +36,7 @@
             </nav>
         </header>
 
+        <!-- flexbox with project overview -->
         <div>
            <div class = "subhead">
                 <div class = "proj-title">
@@ -55,6 +55,7 @@
            </div>
         </div>
 
+        <!-- flexbox with 3 images to accompany the following text -->
         <div class="body-text"> 
             <div class="img-sections">
                 <img class="small-img" id = "img1" alt="a sign for Oregon at Google" src="../assets/google-oregon.jpg" />
@@ -63,6 +64,7 @@
             </div>
         </div>
 
+        <!-- project overview -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Project Overview</div>
@@ -88,6 +90,7 @@
                 The second, and largest part of my project was centered around adding more helpful information to users of the tool. I met with my host and cohost to figure out what users wanted, stepping through their requests and needs. Then, I worked on applying my knowledge from the past few weeks in understanding how the existing codebase worked, to add consistent code. The first part of this phase was merely grabbing the right information; the second part involved displaying the information in a visually appealing manner. I talked to the users to clearly understand their needs, discussed with the team’s product manager on how the UI should look (analyzing color, shape, component, and more), conversed with my host and co-host on their requirements and needs, and finally checked in with the team’s manager to ensure the new components I was adding were in line with the existing look and feel of the interface.
             </div>
 
+            <!-- learnings and takeaways for the project -->
             <div class="intros">
                 <div class="subheading">Takeaways</div>
             </div>
@@ -108,6 +111,7 @@
                 </ol>
             </div>
 
+            <!-- flexbox with images to accompany the text -->
             <div class="body-text"> 
                 <div class="img-sections">
                     <img class="imgs" id = "img4" alt="Japanese garden group photo" src="../assets/japanese-garden.jpg" />
@@ -116,6 +120,7 @@
                 </div>
             </div>
 
+            <!-- final overview of the project -->
             <div class="intros">
                 <div class="subheading">Final Overview</div>
             </div>
@@ -124,6 +129,7 @@
             </div>
         </div>
 
+        <!-- previous and next buttons to navigate between projects -->       
         <div class="footer">
             <div class="container">
                 <div class="contact center">
@@ -143,6 +149,7 @@
             </div>
         </div>
 
+        <!-- personal contact information -->
         <div class="footer">
             <div class="container">
                 <div class="services-list-1">
