--- a/portfolio/projects/infosystems.html
+++ b/portfolio/projects/infosystems.html
@@ -13,6 +13,7 @@
 
     </head>
     <body>
+        <!-- header bar at the top of every page -->
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
@@ -35,6 +36,7 @@
             </nav>
         </header>
 
+        <!-- flexbox with project overview -->
         <div>
             <div class = "subhead">
                  <div class = "proj-title">
@@ -53,6 +55,7 @@
             </div>
          </div>
 
+         <!-- flexbox with posters and graphics I've designed -->
          <div class="body-text"> 
             <div class="img-sections">
                 <img class="imgs" alt="poster with information systems electives" src="../assets/electives.png" />
@@ -79,7 +82,7 @@
             </div>
         </div>
 
-        
+         <!-- previous and next buttons to navigate between projects -->       
         <div class="footer">
             <div class="container">
                 <div class="contact center">
@@ -99,6 +102,7 @@
             </div>
         </div>
 
+        <!-- personal contact information -->
         <div class="footer">
             <div class="container">
                 <div class="services-list-1">
