--- a/portfolio/projects/internet.html
+++ b/portfolio/projects/internet.html
@@ -13,6 +13,7 @@
 
     </head>
     <body>
+        <!-- header at the top of each page -->
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
@@ -35,6 +36,7 @@
             </nav>
         </header>
 
+        <!-- flexbox with project overview -->
         <div>
             <div class = "subhead">
                  <div class = "proj-title">
@@ -53,6 +55,7 @@
             </div>
          </div>
 
+         <!-- project overview description -->
          <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Project Overview</div>
@@ -62,6 +65,7 @@
             </div>
         </div>
 
+        <!-- project timeline in a list format -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Project Timeline</div>
@@ -87,6 +91,7 @@
             </div>            
         </div>
 
+        <!-- research protocol in a list format -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Research Protocol</div>
@@ -136,6 +141,7 @@ thoughts/concerns/comments
             </div>            
         </div>
 
+        <!-- user research description -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">User Research</div>
@@ -145,6 +151,7 @@ thoughts/concerns/comments
             </div>
         </div>
 
+        <!-- images of the hi-fi wireframes in a gallery format -->
          <div class="body-text"> 
             <div class="subheading">Hi-Fi Wireframes</div>
             <div class="description bold">
@@ -170,6 +177,7 @@ thoughts/concerns/comments
             </div>
         </div>
 
+        <!-- project description in text form -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Project Description</div>
@@ -188,7 +196,7 @@ thoughts/concerns/comments
             </div>
         </div>
 
-        
+        <!-- previous and next buttons to navigate between projects -->              
         <div class="footer">
             <div class="container">
                 <div class="contact center">
@@ -207,7 +215,8 @@ thoughts/concerns/comments
                 </div>
             </div>
         </div>
-
+        
+        <!-- personal contact information -->
         <div class="footer">
             <div class="container">
                 <div class="services-list-1">
