--- a/portfolio/projects/jamjelly.html
+++ b/portfolio/projects/jamjelly.html
@@ -13,6 +13,7 @@
 
     </head>
     <body>
+        <!-- header bar at the top of every page -->
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
@@ -35,28 +36,31 @@
             </nav>
         </header>
 
-            <div class = "subhead">
-                 <div class = "proj-title">
-                     Jam & Jelly.
-                 </div>
-                 <div class="desc-parent">
-                     <div class="desc">
-                         <img class="icon" alt="calendar icon" src="../assets/calendar.png" />
-                         <div class="date">Oct - Dec 2021</div>
-                     </div>
-                     <div class="desc">
-                         <img class="icon" alt="group icon" src="../assets/group.png" />
-                         <div class="date">Term Project for 15-112</div>
-                     </div>
-                 </div>
-            </div>
+        <!-- flexbox layout of project overview -->
+        <div class = "subhead">
+                <div class = "proj-title">
+                    Jam & Jelly.
+                </div>
+                <div class="desc-parent">
+                    <div class="desc">
+                        <img class="icon" alt="calendar icon" src="../assets/calendar.png" />
+                        <div class="date">Oct - Dec 2021</div>
+                    </div>
+                    <div class="desc">
+                        <img class="icon" alt="group icon" src="../assets/group.png" />
+                        <div class="date">Term Project for 15-112</div>
+                    </div>
+                </div>
+        </div>
 
+        <!-- YouTube video of project -->
          <div class="body-text-big"> 
             <div class="video-container">
                 <iframe src="https://www.youtube.com/embed/rhHavSdX7ck" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
          </div>
 
+         <!-- text description of project overview -->
          <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Project Overview</div>
@@ -66,6 +70,7 @@
             </div>
         </div>
 
+        <!-- text description of project motivation -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Project Motivation</div>
@@ -75,11 +80,11 @@
             </div>
         </div>
 
+        <!-- flexbox layout of project timeline -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Timeline</div>
             </div>
-
             <div class="description">
                 <div class="table">
                     <div class="col descriptions pad">
@@ -107,10 +112,10 @@
                         </div>
                     </div>
                 </div>
-              
             </div>
         </div>
 
+        <!-- flexbox section of project images -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Wireframes</div>
@@ -129,6 +134,7 @@
             </div>
         </div>
 
+        <!-- text description of structural plan -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Structural Plan</div>
@@ -154,8 +160,7 @@
             </div>
         </div>
 
-        
-
+        <!-- previous and next buttons to navigate between projects -->              
         <div class="footer">
             <div class="container">
                 <div class="contact center">
@@ -175,6 +180,7 @@
             </div>
         </div>
 
+        <!-- personal contact information -->
         <div class="footer">
             <div class="container">
                 <div class="services-list-1">
