--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -14,6 +14,7 @@
 
     </head>
     <body>
+        <!-- header bar at the top of every page -->
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="index.html">
@@ -37,6 +38,7 @@
         </header>
 
         <div>
+            <!-- subheading that describes who I am -->
             <div class = "subhead">
                  <div class = "proj-title">
                      Huarui Lai.
@@ -54,6 +56,7 @@
             </div>
         </div>
 
+        <!-- gallery of text and images about me -->
         <div class="about-body-text">
             <div class="body-text-wide">
                 <div class="subheading">About Me</div>
@@ -141,36 +144,37 @@
             </div>
         </div>
         
-            <div class="footer">
-                <div class="container">
-                    <div class="services-list-1">
-                        <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
-                            <img class="icon" alt="mail-icon" src="assets/plane.png" />
-                            <div class="small-text">
-                                <div class="username">huarui.lai@gmail.com</div>
-                            </div>
-                        </a>
-                        <a class="contact" href = "https://github.com/hlai1" target="_blank">
-                            <img class="icon" alt="github-icon" src="assets/github.png" />
-                            <div class="small-text">
-                                <div class="username">hlai1</div>
-                            </div>
-                        </a>
-                        <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
-                            <img class="icon" alt="linkedin-icon" src="assets/linkedin.png" />
-                            <div class="small-text">
-                                <div class="username">Huarui Lai</div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="contact center">
-                        <img class="icon" alt="star-icon" src="assets/star.png" />
-                        <div class="small-text">   
-                            <div class="username-1">made by Huarui Lai</div>
+        <!-- contact information adn relevant icons -->
+        <div class="footer">
+            <div class="container">
+                <div class="services-list-1">
+                    <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
+                        <img class="icon" alt="mail-icon" src="assets/plane.png" />
+                        <div class="small-text">
+                            <div class="username">huarui.lai@gmail.com</div>
                         </div>
-                        <img class="icon" alt="star-icon" src="assets/star.png" />
+                    </a>
+                    <a class="contact" href = "https://github.com/hlai1" target="_blank">
+                        <img class="icon" alt="github-icon" src="assets/github.png" />
+                        <div class="small-text">
+                            <div class="username">hlai1</div>
+                        </div>
+                    </a>
+                    <a class="contact" href = "https://linkedin.com/in/huarui-lai" target="_blank">
+                        <img class="icon" alt="linkedin-icon" src="assets/linkedin.png" />
+                        <div class="small-text">
+                            <div class="username">Huarui Lai</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="contact center">
+                    <img class="icon" alt="star-icon" src="assets/star.png" />
+                    <div class="small-text">   
+                        <div class="username-1">made by Huarui Lai</div>
                     </div>
+                    <img class="icon" alt="star-icon" src="assets/star.png" />
                 </div>
             </div>
+        </div>
     </body>
 </html>
