--- a/portfolio/projects/pamela.html
+++ b/portfolio/projects/pamela.html
@@ -13,6 +13,7 @@
 
     </head>
     <body>
+        <!-- header bar at the top of every page -->
         <header class="primary-header flex">
             <h1 class="logo">
                 <a href="../index.html">
@@ -35,22 +36,24 @@
             </nav>
         </header>
 
-            <div class = "subhead">
-                 <div class = "proj-title">
-                     Pamela's Diner.
-                 </div>
-                 <div class="desc-parent">
-                     <div class="desc">
-                         <img class="icon" alt="calendar icon" src="../assets/calendar.png" />
-                         <div class="date">March - April 2022</div>
-                     </div>
-                     <div class="desc">
-                         <img class="icon" alt="group icon" src="../assets/group.png" />
-                         <div class="date">Website Redesign for 67-250</div>
-                     </div>
-                 </div>
-            </div>
+        <!-- flexbox with project overview -->
+        <div class = "subhead">
+                <div class = "proj-title">
+                    Pamela's Diner.
+                </div>
+                <div class="desc-parent">
+                    <div class="desc">
+                        <img class="icon" alt="calendar icon" src="../assets/calendar.png" />
+                        <div class="date">March - April 2022</div>
+                    </div>
+                    <div class="desc">
+                        <img class="icon" alt="group icon" src="../assets/group.png" />
+                        <div class="date">Website Redesign for 67-250</div>
+                    </div>
+                </div>
+        </div>
 
+        <!-- project overview description -->
          <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Project Overview</div>
@@ -60,6 +63,7 @@
             </div>
         </div>
 
+        <!-- flexbox image gallery of lo-fi wireframes -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Lo-Fi Wireframes</div>
@@ -73,6 +77,7 @@
             </div>
         </div>
 
+        <!-- flexbox layout of redesigned logo and color palette -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Redesigned Logo and Color Palette</div>
@@ -83,6 +88,7 @@
             </div>
         </div>
 
+        <!-- information architecture description -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Information Architecture</div>
@@ -94,6 +100,8 @@
                 This site is built intentionally and carefully, with clear font sizes, a consistent color scheme, and ease of navigation emphasized throughout. When the user lands on the main page, they’ll notice the large, newly designed Pamela’s Diner logo and their motto. There’s a picture of one of their stores on the main page to draw the user in and provide visual stimulation. On the other four pages, I utilized subtitles and headers to break up the information and make the page more readable. I also consistently used sized and formatted body text to increase readability. The two most important areas of the website to increase ease of navigation are located at the top for easy access. The top of the website has the fixed menu and search bar so the user doesn’t have to scroll all the way up to move pages and there is no need for extra links in the footer. The footer on the right hand side contains all the important information so users can easily contact Pamela’s Diner in Shadyside, and the clickable logo allows for easy navigation back to the main page. The main objective of the organization was clear headings to organize information (hence, the Google Maps of the diner is under the Location page). Minimal, if any, information is redundant on the website, and important information (such as Pamela’s contact information) is accessible on each and every page. 
             </div>
         </div>
+
+        <!-- list format of user stories -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">User Stories</div>
@@ -119,6 +127,7 @@
             </div>            
         </div>
 
+        <!-- list format for research protocol -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Research Protocol</div>
@@ -178,6 +187,7 @@ thoughts/concerns/comments
             </div>            
         </div>
 
+        <!-- list format for performed user research -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">User Research</div>
@@ -222,9 +232,11 @@ thoughts/concerns/comments
                 </ul>
             </div>
         </div>
+
+        <!-- flexbox website redesign images -->
         <div class="body-text"> 
             <div class="intros">
-                    <div class="subheading">Website Design</div>
+                    <div class="subheading">Website Redesign</div>
             </div>
             <div class="img-sections">
                 <img class="pam-wireframe" alt="redesigned Pamela's Diner website page 1" src="../assets/pam1.PNG" />
@@ -237,6 +249,7 @@ thoughts/concerns/comments
             </div>
         </div>
 
+        <!-- text overview of the programming behind the project -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Programming the Product</div>
@@ -246,6 +259,7 @@ thoughts/concerns/comments
             </div>
         </div>
 
+        <!-- text description of future steps -->
         <div class="body-text"> 
             <div class="intros">
                     <div class="subheading">Future Steps</div>
@@ -263,6 +277,7 @@ thoughts/concerns/comments
             </div>
         </div>
 
+        <!-- previous and next buttons to navigate between projects -->              
         <div class="footer">
             <div class="container">
                 <div class="contact center">
@@ -282,6 +297,7 @@ thoughts/concerns/comments
             </div>
         </div>
 
+        <!-- personal contact information -->
         <div class="footer">
             <div class="container">
                 <div class="services-list-1">
