--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -73,8 +73,8 @@
                 </div>
 
                 <!-- gallery view of all my projects -->
-                <div class="services">
-                    <div class="services-list">
+                <div class="project">
+                    <div class="project-list">
                         <div class="proj" id = "proj1"> 
                             <a href="projects/google.html">
                                 <img class="image-display" alt="night sky graphic with the text Google Ads" src="assets/google.png" />
@@ -152,7 +152,7 @@
                 <!-- footer section with contact information and relevant icons -->
                 <div class="footer">
                     <div class="container">
-                        <div class="services-list-1">
+                        <div class="footer-list">
                             <a class="contact" href="mailto:huarui.lai@gmail.com" target="_blank">
                                 <img class="icon" alt="mail icon" src="assets/plane.png" />
                                 <div class="small-text">
