updated footer bar

--- a/portfolio/projects/infosystems.html
+++ b/portfolio/projects/infosystems.html
@@ -76,7 +76,7 @@
             <div class="description">
                 Here are a few graphics I've designed for the Information Systems Department
                 at Carnegie Mellon University. Outside of graphic design, I help manage the <span>
-                    <a href="google.html" class="green-font bold" target="_blank">CMU IS Website</a>
+                    <a href="google.html" class="dark-green-font bold" target="_blank">CMU IS Website</a>
                   </span>
                 by uploading up-to-date content, resources, and opportunities for students.
             </div>
@@ -105,7 +105,7 @@
         <!-- personal contact information -->
         <div class="footer">
             <div class="container">
-                <div class="services-list-1">
+                <div class="footer-list">
                     <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
                         <img class="icon" alt="mail icon" src="../assets/plane.png" />
                         <div class="small-text">
