--- a/portfolio/projects/jamjelly.html
+++ b/portfolio/projects/jamjelly.html
@@ -183,7 +183,7 @@
         <!-- personal contact information -->
         <div class="footer">
             <div class="container">
-                <div class="services-list-1">
+                <div class="footer-list">
                     <a class="contact" href = "mailto:huarui.lai@gmail.com" target="_blank">
                         <img class="icon" alt="mail icon" src="../assets/plane.png" />
                         <div class="small-text">
