--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -147,7 +147,7 @@
         <!-- contact information adn relevant icons -->
         <div class="footer">
             <div class="container">
-                <div class="services-list-1">
+                <div class="footer-list">
                     <a class="contact" href = "mailto: huarui.lai@gmail.com" target="_blank">
                         <img class="icon" alt="mail-icon" src="assets/plane.png" />
                         <div class="small-text">
