--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -131,7 +131,7 @@
                         <div class="collage-left">
                             <div class="abt-img-sections">
                                 <img class="big-img" alt="internet-1" src="assets/about/asa-dance.JPG" />
-                                <img class="abt-imgs" alt="internet-2" src="assets/about/build-booth.jpg" />
+                                <img class="resize-img-2" alt="internet-2" src="assets/about/build-booth.jpg" />
                                 <img class="resize-img" alt="internet-2" src="assets/about/pyramid.jpg" />
                                 <img class="big-img" alt="internet-2" src="assets/about/booth.jpg" />
                             </div>
