--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -63,9 +63,9 @@
                     <div class="collage">
                         <div class="collage-left">
                             <div class="abt-img-sections">
-                                <img class="abt-imgs" alt="internet-1" src="assets/about/pfp1.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="assets/about/yosemite-selfie.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="assets/about/ny-art.jpg" />
+                                <img class="abt-imgs" alt="picture with earmuffs" src="assets/about/pfp1.jpg" />
+                                <img class="abt-imgs" alt="yosemite selfie" src="assets/about/yosemite-selfie.jpg" />
+                                <img class="abt-imgs" alt="me in front of ny art wall" src="assets/about/ny-art.jpg" />
                             </div>
                         </div>
 
@@ -89,12 +89,12 @@
                         </div>
                         <div class="collage-left">
                             <div class="abt-img-sections">
-                                <img class="abt-imgs" alt="internet-1" src="assets/about/germany.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="assets/about/sahara-desert.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="assets/about/blue-city.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="assets/about/surf.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="assets/about/coffee-farm.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="assets/about/fruit.jpg" />
+                                <img class="abt-imgs" alt="me in german museum" src="assets/about/germany.jpg" />
+                                <img class="abt-imgs" alt="sahara desert" src="assets/about/sahara-desert.jpg" />
+                                <img class="abt-imgs" alt="me walking in chefchaouen, morocco" src="assets/about/blue-city.jpg" />
+                                <img class="abt-imgs" alt="surfing in panama" src="assets/about/surf.jpg" />
+                                <img class="abt-imgs" alt="flowers and trees with a blue sky" src="assets/about/coffee-farm.jpg" />
+                                <img class="abt-imgs" alt="fruit stand in morocco" src="assets/about/fruit.jpg" />
                             </div>
                         </div>
                     </div>
@@ -106,10 +106,10 @@
                     <div class="collage">
                         <div class="collage-left">
                             <div class="abt-img-sections">
-                                <img class="big-img" alt="internet-1" src="assets/about/drone-shot.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="assets/about/hot-pot.jpg" />
-                                <img class="abt-imgs" alt="internet-2" src="assets/about/pastries.jpg" />
-                                <img class="big-img" alt="internet-2" src="assets/about/drone2.jpg" />
+                                <img class="big-img" alt="drone shot of panama beach" src="assets/about/drone-shot.jpg" />
+                                <img class="abt-imgs" alt="hot pot dinner" src="assets/about/hot-pot.jpg" />
+                                <img class="abt-imgs" alt="pastries from a bake shop" src="assets/about/pastries.jpg" />
+                                <img class="big-img" alt="drone shot of california beach" src="assets/about/drone2.jpg" />
                             </div>
                         </div>
                         <div class="collage-right">
@@ -130,10 +130,10 @@
                         </div>
                         <div class="collage-left">
                             <div class="abt-img-sections">
-                                <img class="big-img" alt="internet-1" src="assets/about/asa-dance.JPG" />
-                                <img class="resize-img-2" alt="internet-2" src="assets/about/build-booth.jpg" />
-                                <img class="resize-img" alt="internet-2" src="assets/about/pyramid.jpg" />
-                                <img class="big-img" alt="internet-2" src="assets/about/booth.jpg" />
+                                <img class="big-img" alt="group dance photo" src="assets/about/asa-dance.JPG" />
+                                <img class="resize-img-2" alt="selfie of me on top of a wooden booth" src="assets/about/build-booth.jpg" />
+                                <img class="resize-img" alt="human pyramid with friends" src="assets/about/pyramid.jpg" />
+                                <img class="big-img" alt="minions-themed booth" src="assets/about/booth.jpg" />
                             </div>
                         </div>
                     </div>
